@@ -2,6 +2,8 @@ DIST OpenArenaPack.zip 46745 RMD160 de376231a3aa083bd11f866f6d3620fab60605a6 SHA
 DIST Quake2Pack.zip 10878 RMD160 8b167c129e0d0542985358cb679ef778be53389f SHA1 222ef2151b731d69291b177ea1692c4e0207387c SHA256 b62b3a38f9fc80522af91a5d6f0a62598b97790b604ba6daab5e04efa381a605
 DIST QuakePack.zip 16447 RMD160 5312d17004440044b47b5c6b3edce2ed910c0ca8 SHA1 28ef966012854bcd3320a75bddf93b97c5589afd SHA256 234a7bb111b97878ae801ad8dc0613b59b8900bf0582072e9d784113153490d6
 DIST TremulousPack.zip 17153 RMD160 fe004da3eb1bf02e474e1ffdbe582913f0c9d3c6 SHA1 e6343ba67f8dbc7c5f42b4c65df865eb24767278 SHA256 2328a88a9353b42a3834ce6f6a4c1d6dc056c84582afcc520c6bd486ba8c1287
+DIST netradiant-1.5.0_p20110127.tar.xz 2066856 RMD160 cf4f28a08a89052882920a9aecc3c25f3426ce5f SHA1 c07f7168700994a88a8fac3c1b8ab9be2f24e75d SHA256 a3607f0beb66b4ff2d7451ad5e9849d0fd85ab0274931bc12c5fbe1c480e3ee7
+EBUILD netradiant-1.5.0_p20110127.ebuild 4216 RMD160 40341f2bb5e11b2454ec42b2cf4fa509e5fbd77d SHA1 fb8522db4cedb7cc0efeac7e09226a45879ab1ac SHA256 c8f53bc11b66c81d3051cb2c15b0096c50d99030663f3832499af862fdab9046
 EBUILD netradiant-9999.ebuild 6554 RMD160 6d545a0d3a9923610693aa63bb6db571d9ef7684 SHA1 0f1baa194ef8b48fdbc258fae90f12f4f20d0717 SHA256 d1dcbf302a261fa1bf3a00374796e4339b23ef33cf7ba5d014bd001d0bf71889
-MISC ChangeLog 423 RMD160 8372cee79f3b109b50d59d51ad81a713085a35be SHA1 29b61a29d43ebc7e4d069a9288ddb68ec4a23a12 SHA256 30823d2f95ddd77e0be4fa09704614a6bbe3e12da0cadba30888becf222256bd
+MISC ChangeLog 563 RMD160 f2c794dc82bd0c90563e8f9b6aaf186445ec077e SHA1 e6ddd209fb4a7ab12e97fab981e4e9f0c98d570f SHA256 fda80d77b887610ce92a9f5f2c1d9181c7b0d891ad8cd1e3b7662c55270cf22a
 MISC metadata.xml 1135 RMD160 622c62e6d19dd56e67a0e3d81769bab188cd8995 SHA1 78959671e514034724f235cf0866a774eebc8493 SHA256 f7cf648da6ef09104d7e325168d02a096972b103b427a19dec74a282fef4efd0
